--- a/_posts/2019-10-02-git常用命令.md
+++ b/_posts/2019-10-02-git常用命令.md
@@ -26,3 +26,5 @@ tag: git
 `git clean -df` 删除没有被追踪的文件夹和目录，*.gitignore文件生效，在里面的不删除*
 
 `git clean -x ` 删除当前目录下所有没有track过的文件，*.gitignore文件无效*
+
+`git reset --hard origin/master ` 使用origin/master分支重置当前分支
